--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,19 +3,7 @@ name: CI/CD
 on: push
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run a one-line script
-        run: echo "Hello, CI/CD!"
-
-      #- name: Simulate an error
-      #  run: echo "About to fail"; exit 1
-      - name: Another greeting
-        run: echo "Hello, CI/CD again!"
   test:
     runs-on: ubuntu-latest
     steps:
@@ -30,4 +18,16 @@ jobs:
       - name: Test status
         run: echo "Test status, passed"
        
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
 
+      - name: Run a one-line script
+        run: echo "Hello, CI/CD!"
+
+      #- name: Simulate an error
+      #  run: echo "About to fail"; exit 1
+      - name: Another greeting
+        run: echo "Hello, CI/CD again!"
