--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,28 +8,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run a one-line script
-        run: echo "Hello, CI/CD!"
-      - name: Run a one-line script
-        run: echo "Hello, CI/CD again!"
-      - name: Run a test
-        run: echo "Running a test"
-
-      - name: Test status
-        run: echo "Test status, passed"  
+        with:
+          persist-credentials: false 
+      - name: Install dependency
+        run: npm install
+      - name: Lint 
+        run: npm run lint
+      - name: Test
+        run: npm run test
   build:
     runs-on: ubuntu-latest
     needs: test
     steps:
       - uses: actions/checkout@v4
-
-      - name: Run a one-line script
-        run: echo "Hello, CI/CD!"
-
-      #- name: Simulate an error
-      #  run: echo "About to fail"; exit 1
-      - name: Another greeting
-        run: echo "Hello, CI/CD again!"
+        with:
+          persist-credentials: false 
+      - name: Install dependency
+        run: npm install
+      - name: Lint 
+        run: npm run lint
+      - name: Test
+        run: npm run build
   deploy:
     runs-on: ubuntu-latest
     needs: build
