--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,8 +25,8 @@ jobs:
           persist-credentials: false 
       - name: Install dependency
         run: npm install
-      - name: Lint 
-        run: npm run lint
+      # - name: Lint 
+      #   run: npm run lint
       - name: Test
         run: npm run build
   deploy:
