--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "jest"
+    "lint": "echo 'Linting!'",
+    "build": "echo 'Running a build!'",
+    "test": "echo 'Running unit tests!'"
 
   },
   "keywords": [],
