--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "nodemon index.js",
     "lint": "echo 'Linting!'",
     "build": "echo 'Running a build!'",
-    "test": "echo 'Running unit tests!'"
-
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
